--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@ body {
 .header {
     grid-area: header;
     height: 100vh;
-    background: url(./src/images/desktop/image-header.jpg) no-repeat center/cover;
+    background: url(../images/desktop/image-header.jpg) no-repeat center/cover;
 }
 
 .header .header-container {
@@ -79,7 +79,7 @@ body {
 }
 
 .header::after {
-    content: url(./src/images/icon-arrow-down.svg);
+    content: url(../images/icon-arrow-down.svg);
     position: absolute;
     right: 930px;
     bottom: 450px;
@@ -165,11 +165,11 @@ body {
 }
 
 .about .image-right {
-    background: url(./src/images/desktop/image-transform.jpg) no-repeat center/cover;
+    background: url(../images/desktop/image-transform.jpg) no-repeat center/cover;
 }
 
 .about .image-left {
-    background: url(./src/images/desktop/image-stand-out.jpg) no-repeat center/cover;
+    background: url(../images/desktop/image-stand-out.jpg) no-repeat center/cover;
 }
 
 .services {
@@ -179,7 +179,7 @@ body {
 }
 
 .services .graphic {
-    background: url(./src/images/desktop/image-graphic-design.jpg) no-repeat center/cover;
+    background: url(../images/desktop/image-graphic-design.jpg) no-repeat center/cover;
     text-align: center;
     color: hsl(167, 40%, 24%);
 }
@@ -197,7 +197,7 @@ body {
 }
 
 .services .photography {
-    background: url(./src/images/desktop/image-photography.jpg) no-repeat center/cover;
+    background: url(../images/desktop/image-photography.jpg) no-repeat center/cover;
     text-align: center;
     color: hsl(198, 62%, 26%);
 }
